--- a/detail.html
+++ b/detail.html
@@ -28,6 +28,13 @@
     body.dark #loadingOverlay{background:rgba(18,18,18,.85);color:#eee;}
     .loader{border:4px solid #f3f3f3;border-top:4px solid var(--accent);border-radius:50%;width:40px;height:40px;animation:spin 1s linear infinite;margin-bottom:1rem;}
     @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+
+    /* Modal Notifikasi */
+    #customModal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:4000;}
+    .modal-box{background:var(--card-light);color:var(--text-light);padding:1.5rem;border-radius:16px;max-width:300px;text-align:center;box-shadow:0 6px 18px rgba(0,0,0,.2);animation:fadeIn .3s ease;}
+    body.dark .modal-box{background:var(--card-dark);color:var(--text-dark);}
+    @keyframes fadeIn{from{opacity:0;transform:scale(.9);}to{opacity:1;transform:scale(1);}}
+    .modal-box button{margin-top:1rem;}
   </style>
 </head>
 <body>
@@ -52,6 +59,14 @@
   <div id="loadingOverlay">
     <div class="loader"></div>
     <p>Memuat konten...</p>
+  </div>
+
+  <!-- Modal Notifikasi -->
+  <div id="customModal">
+    <div class="modal-box">
+      <p id="modalMessage">Pesan notifikasi</p>
+      <button onclick="closeModal()" class="btn">OK</button>
+    </div>
   </div>
 
   <!-- Firebase -->
@@ -86,6 +101,15 @@
     function showLoading(){document.getElementById("loadingOverlay").style.display="flex";}
     function hideLoading(){document.getElementById("loadingOverlay").style.display="none";}
 
+    // Modal
+    window.showModal=function(msg){
+      document.getElementById("modalMessage").textContent=msg;
+      document.getElementById("customModal").style.display="flex";
+    }
+    window.closeModal=function(){
+      document.getElementById("customModal").style.display="none";
+    }
+
     async function loadDetail(){
       const id=new URLSearchParams(window.location.search).get("id");
       if(!id){document.getElementById("detailContainer").innerHTML="❌ Tidak ada ID berita.";return;}
@@ -104,7 +128,7 @@
           </div>`;
       } catch(err){
         hideLoading();
-        alert("Gagal memuat detail: "+err.message);
+        showModal("Gagal memuat detail: "+err.message);
       }
     }
 
