--- a/admin.html
+++ b/admin.html
@@ -53,6 +53,12 @@
     #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,0.7);display:none;justify-content:center;align-items:center;z-index:3000;}
     .spinner{width:50px;height:50px;border:4px solid #ddd;border-top:4px solid var(--accent);border-radius:50%;animation:spin 1s linear infinite;}
     @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+
+    /* Modal Notifikasi */
+    #customModal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:4000;}
+    .modal-box{background:var(--card);color:var(--text);padding:1.5rem;border-radius:16px;max-width:300px;text-align:center;box-shadow:0 6px 18px rgba(0,0,0,.2);animation:fadeIn .3s ease;}
+    @keyframes fadeIn{from{opacity:0;transform:scale(.9);}to{opacity:1;transform:scale(1);}}
+    .modal-box button{margin-top:1rem;}
   </style>
 </head>
 <body>
@@ -141,13 +147,20 @@
   <!-- LOADING -->
   <div id="loadingOverlay"><div class="spinner"></div></div>
 
+  <!-- Modal Notifikasi -->
+  <div id="customModal">
+    <div class="modal-box">
+      <p id="modalMessage">Pesan notifikasi</p>
+      <button onclick="closeModal()" class="btn">OK</button>
+    </div>
+  </div>
+
   <!-- FIREBASE -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
     import { getFirestore, collection, addDoc, updateDoc, doc, getDocs, getDoc, query, where, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
 
-    // Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",
       authDomain: "portal-berita-firebase.firebaseapp.com",
@@ -160,7 +173,6 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // Cloudinary
     const CLOUD_NAME = "dfojor5pr";
     const UPLOAD_PRESET = "portal-firebase";
 
@@ -173,7 +185,15 @@
 
     function showLoading(on=true){document.getElementById("loadingOverlay").style.display=on?"flex":"none";}
 
-    // Auth state
+    // Modal
+    window.showModal=function(msg){
+      document.getElementById("modalMessage").textContent=msg;
+      document.getElementById("customModal").style.display="flex";
+    }
+    window.closeModal=function(){
+      document.getElementById("customModal").style.display="none";
+    }
+
     onAuthStateChanged(auth,(user)=>{
       if(user){loginCard.classList.add("hidden");formCard.classList.remove("hidden");listCard.classList.remove("hidden");reloadList();}
       else{loginCard.classList.remove("hidden");formCard.classList.add("hidden");listCard.classList.add("hidden");}
@@ -187,9 +207,7 @@
     };
 
     document.getElementById("logoutBtn").onclick=()=>signOut(auth);
-
     document.getElementById("resetBtn").onclick=()=>resetForm();
-
     document.getElementById("saveBtn").onclick=()=>submitForm();
 
     async function reloadList(){
@@ -233,8 +251,8 @@
     };
 
     window.arsipkan=async(id)=>{
-      if(!confirm("Arsipkan item ini?"))return;
       await updateDoc(doc(db,"posts",id),{status:"Arsip"});
+      showModal("Konten berhasil diarsipkan.");
       reloadList();
     };
 
@@ -274,8 +292,9 @@
         if(EDIT_ID){await updateDoc(doc(db,"posts",EDIT_ID),payload);}
         else{await addDoc(collection(db,"posts"),payload);}
         document.getElementById("formMsg").textContent="Tersimpan ✓";
+        showModal("Konten berhasil disimpan.");
         resetForm();reloadList();
-      }catch(err){document.getElementById("formMsg").textContent="Gagal menyimpan: "+err.message;}
+      }catch(err){showModal("Gagal menyimpan: "+err.message);}
     }
   </script>
 </body>
