--- a/detail.html
+++ b/detail.html
@@ -43,11 +43,11 @@
     .theme-toggle{position:fixed;bottom:12px;left:12px;z-index:2000;background:var(--card-light);border:none;border-radius:50%;width:40px;height:40px;font-size:1.2rem;cursor:pointer;display:flex;align-items:center;justify-content:center;box-shadow:0 2px 6px rgba(0,0,0,.2);}
     body.dark .theme-toggle{background:var(--card-dark);color:#fff;}
 
-    main{padding:1.5rem;max-width:800px;margin:auto;}
+    main{padding:1.5rem;:800px;margin:auto;}
     .card{background:var(--card-light);margin-bottom:1.2rem;border-radius:18px;padding:1.2rem;box-shadow:0 4px 12px rgba(0,0,0,.05);}
     body.dark .card{background:var(--card-dark);}
     .date{font-size:.85rem;color:#777;margin-bottom:.6rem;} body.dark .date{color:#aaa;}
-    .detail-img{max-width:100%;max-width:700px;max-height:400px;border-radius:12px;margin:1rem auto;display:block;object-fit:cover;cursor:zoom-in;}
+    .detail-img{width:100%;max-width:700px;max-height:400px;border-radius:12px;margin:1rem auto;display:block;object-fit:cover;cursor:zoom-in;}
 
     footer{text-align:center;padding:1rem;font-size:.9rem;opacity:.7;}
 
